hey i'm adding fruits juice list .

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         <li>apple3</li>
     </ul>
     <ul>
+        <li>mango</li>
         <li>apple</li>
-        <li>apple1</li>
-        <li>apple2</li>
-        <li>apple3</li>
+        <li>carrot</li>
+        <li>avacado..</li>
     </ul>
+      <h3>Fruits juice for all</h3>
     <ul>
         <li>apple</li>
         <li>apple1</li>
